--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^16.0.2",
-    "@angular/cli": "^16.0.2",
+    "@angular-devkit/core": "16.2.1",
+    "@angular/cli": "~16.0.2",
     "@angular/compiler-cli": "^16.0.0",
     "@types/jasmine": "~4.3.0",
     "jasmine-core": "~4.6.0",
