--- a/angular.json
+++ b/angular.json
@@ -31,7 +31,7 @@
             ],
             "styles": [
               "@angular/material/prebuilt-themes/pink-bluegrey.css",
-              "./node_modules/leaflet/dist/leaflet.css",
+              "./node_modules/ol/ol.css",
               "src/styles.scss"
             ],
             "scripts": []
